--- a/styles.css
+++ b/styles.css
@@ -13,14 +13,17 @@ body {
 }
 
 .header {
-    background-image: url(resources/Banner\ Image.png);
+    background-image: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0) 100%), url(resources/Banner\ Image.png);
+    width: auto;
     height: 600px;
+    margin-top: 50px;
     border-radius: 16px;
-    background: black
+
 }
 
 .banner-heading {
-    padding: 175px 345px;
+    padding: 120px 345px;
+    row-gap: 16px;
 
 }
 
