--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body {
 .header {
     background-image: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0) 100%), url(resources/Banner\ Image.png);
     width: auto;
-    height: 46%;
+    height: 600px;
     margin-top: 50px;
     border-radius: 16px;
 
