--- a/styles.css
+++ b/styles.css
@@ -78,3 +78,35 @@ body {
     height: 500px;
 
 }
+
+.welcome {
+    background-image: linear-gradient(90deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%), url(resources/Vectorrr.png);
+    width: 100%;
+    height: 600px;
+}
+
+.welcome-text {
+    padding: 110px 550px 140px 156px;
+    gap: 24px;
+}
+
+.welcome-text h1 {
+    color: #fff;
+    font-size: 64px;
+    font-weight: 900;
+    line-height: 88px;
+    letter-spacing: 8px;
+}
+
+.welcome-text p {
+    color: rgba(255, 255, 255, 0.791);
+    font-size: 18px;
+    line-height: 30px;
+}
+
+.welcome-text button {
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    background: none;
+}
