--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,6 @@ body {
 
 .header {
     background-image: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0) 100%), url(resources/Banner\ Image.png);
-    width: auto;
     height: 600px;
     margin-top: 50px;
     border-radius: 16px;
@@ -62,23 +61,27 @@ body {
     color: red;
     font-size: 80px;
     font-weight: 800;
+    margin-bottom: 40px;
 }
 
 .offer-text-01 p {
     font-size: 25px;
     font-weight: 500;
     color: red;
+    margin-bottom: 0;
 }
 
 .offer-text-02 {
     font-size: 48px;
     font-weight: 700;
     color: #070211;
+    margin-top: 5px;
 }
 
 .offer-img {
     width: 50%;
     height: 500px;
+    text-align: center;
 
 }
 
@@ -143,4 +146,5 @@ body {
 .announcement {
     margin-top: 100px;
     text-align: center;
+
 }
