--- a/styles.css
+++ b/styles.css
@@ -145,6 +145,58 @@ body {
 
 .announcement {
     margin-top: 100px;
-    text-align: center;
+    justify-content: space-between;
+    display: flex;
+    gap: 15px;
+}
 
+.announcement-offer {
+    width: 390px;
+    height: auto;
+    text-align: left;
+}
+
+.announcement-offer h3 {
+    color: red;
+    font-size: 24px;
+    font-weight: 500px;
+    margin-bottom: 0;
+}
+
+.announcement-offer h1 {
+    color: #070211;
+    font-size: 48px;
+    font-weight: 900;
+    margin-top: 4px;
+    margin-bottom: 0;
+}
+
+.announcement-offer p {
+    color: #070211;
+}
+
+.announcement-grtings {
+    width: 350px;
+    height: auto;
+    text-align: left;
+}
+
+.announcement-img {
+    width: 365px;
+    height: 365px;
+    text-align: center;
+    border: 35px solid rebeccapurple;
+    border-radius: 460px;
+    /* padding: 20px; */
+    border-style: ridge;
+}
+
+.test {
+
+    height: 1000px;
+    margin-top: 100px;
+    color: aquamarine;
+    text-align: center;
+    border: 2px solid black;
+    background-color: azure;
 }
