--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
     max-width: 1320px;
     margin: 0 140px;
     width: auto;
-    align-items: center;
+    /* align-items: center; */
 }
 
 .header {
@@ -156,14 +156,16 @@ body {
     text-align: left;
 }
 
-.announcement-offer h3 {
+.announcement-offer h3,
+.portfolio-text h3 {
     color: red;
     font-size: 24px;
     font-weight: 500px;
     margin-bottom: 0;
 }
 
-.announcement-offer h1 {
+.announcement-offer h1,
+.portfolio-text h1 {
     color: #070211;
     font-size: 48px;
     font-weight: 900;
@@ -171,7 +173,8 @@ body {
     margin-bottom: 0;
 }
 
-.announcement-offer p {
+.announcement-offer p,
+.portfolio-text p {
     color: #070211;
 }
 
@@ -208,12 +211,19 @@ body {
     margin-top: 16px;
 }
 
-.test {
-
-    height: 1000px;
+.portfolio {
+    width: 80%;
+    background-color: #fff;
     margin-top: 100px;
-    color: aquamarine;
-    text-align: center;
-    border: 2px solid black;
-    background-color: azure;
+}
+
+.portfolio-img {
+    gap: 10px;
+    height: auto;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.portfolio-img img {
+    width: 400px;
 }
