--- a/styles.css
+++ b/styles.css
@@ -87,6 +87,7 @@ body {
 
 .welcome {
     background-image: linear-gradient(90deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%), url(resources/Vectorrr.png);
+    background-size: cover;
     width: auto;
     height: 600px;
     margin-top: 100px;
@@ -271,4 +272,46 @@ body {
     font-size: 28px;
     font-weight: 600;
     color: #fff;
+}
+
+.footer {
+    background-color: #070211;
+    width: 100%;
+    height: auto;
+}
+
+.footer-text {
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+    color: #fff;
+    padding: 120px 240px 120px 140px;
+}
+
+.social-contact {
+    color: #fff;
+    text-align: center;
+}
+
+.copywrite-footer {
+    color: #fff;
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+    padding: 120px 140px;
+}
+
+.social-contact {
+    gap: 24px;
+    display: flex;
+    text-align: center;
+    margin: 0 500px;
+}
+
+.copywrite-footer button {
+    border: none;
+    font-size: 24px;
+    font-weight: 500;
+    background: inherit;
+    color: #fff
 }
