--- a/styles.css
+++ b/styles.css
@@ -217,7 +217,7 @@ margin-bottom: 0;
 
 .portfolio {
     width: 80%;
-    background-color: #fff;
+    background-color: #f2dddd90;
     margin-top: 100px;
 }
 
@@ -278,7 +278,7 @@ margin-bottom: 0;
 .footer {
     background-color: #070211;
     width: 100%;
-    height: auto;
+    height: 500px;
 }
 
 .footer-text {
@@ -286,12 +286,7 @@ margin-bottom: 0;
     display: flex;
     justify-content: space-between;
     color: #fff;
-    padding: 120px 240px 120px 140px;
-}
-
-.social-contact {
-    color: #fff;
-    text-align: center;
+    padding: 80px 240px 0px 140px;
 }
 
 .copywrite-footer {
@@ -299,14 +294,13 @@ margin-bottom: 0;
     align-items: center;
     display: flex;
     justify-content: space-between;
-    padding: 120px 140px;
+    padding: 50px 240px 140px 140px;
 }
 
-.social-contact {
+.footer .social-contact {
     gap: 24px;
     display: flex;
-    text-align: center;
-    margin: 0 500px;
+    padding: 0% 40%;
 }
 
 .copywrite-footer button {
