--- a/styles.css
+++ b/styles.css
@@ -50,37 +50,32 @@ body {
 
 .offer-text {
     text-align: center;
-    gap: 20px;
 }
 
-.offer-text-01 {
-    gap: 30px;
-}
-
-.offer-text-01 h1 {
+.offer-text .heading1 {
     color: red;
-    font-size: 80px;
-    font-weight: 800;
-    margin-bottom: 40px;
-}
-
-.offer-text-01 p {
-    font-size: 25px;
-    font-weight: 500;
-    color: red;
+    font-size: 88px;
+    font-weight: 700;
     margin-bottom: 0;
 }
 
-.offer-text-02 {
+.offer-text .para1 {
+    margin-top: 10px;
+    color: red;
+    font-size: 24px;
+    font-weight: 500;
+}
+
+.offer-text .heading2 {
+    color: #070211;
     font-size: 48px;
     font-weight: 700;
-    color: #070211;
-    margin-top: 5px;
+    margin-top: 0;
 }
 
 .offer-img {
-    width: 50%;
-    height: 500px;
+    /* width: 40%;
+    height: 500px; */
     text-align: center;
 
 }
@@ -125,10 +120,15 @@ body {
 
 .party-detail {
     background: linear-gradient(180deg, rgba(255, 0, 0, 0.10) 0%, rgba(255, 0, 0, 0.00) 100%);
+    width: 25.5%;
     height: 300px;
     text-align: center;
     padding: 100px 360px;
     margin-top: 100px;
+}
+
+.party-detail-text span {
+    color: red;
 }
 
 .party-detail-button {
