assignment final draft

--- a/styles.css
+++ b/styles.css
@@ -120,7 +120,7 @@ body {
 
 .party-detail {
     background: linear-gradient(180deg, rgba(255, 0, 0, 0.10) 0%, rgba(255, 0, 0, 0.00) 100%);
-    width: 25.5%;
+    width: 600px;
     height: 300px;
     text-align: center;
     padding: 100px 360px;
